--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,31 @@
 <resources>
     <string name="app_name">BiniyamsBackendCalculator</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="zero">0</string>
+    <string name="doublezero">00</string>
+
+    <string name="cbutton">C</string>
+    <string name="equals">=</string>
+    <string name="divide">÷</string>
+    <string name="multi">*</string>
+    <string name="add">+</string>
+    <string name="sub">-</string>
+    <string name="dot">.</string>
+    <string name="percent">%</string>
+    <string name="back">4</string>
+    <string name="par1">(</string>
+    <string name="par2">)</string>
+    <string name="sqroot">√ </string>
+    <string name="pi">π</string>
+
+
+
 </resources>
